--- a/components/dashboard/FeelingCheckCard/FeelingCheckCard.module.css
+++ b/components/dashboard/FeelingCheckCard/FeelingCheckCard.module.css
@@ -43,9 +43,10 @@
 }
 
 .btn.btn {
-  width: 250px;
+  width: fit-content;
+  align-self: center;
   --btn-height: 46px;
-  --btn-font-size: 16px;
+  --btn-font-size: 14px;
 }
 
 /* tablet */
