--- a/components/diary/AddDiaryEntryForm/AddDiaryEntryForm.module.css
+++ b/components/diary/AddDiaryEntryForm/AddDiaryEntryForm.module.css
@@ -1,9 +1,8 @@
 .formWrap {
-    width: 520px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 520px;
     margin: 0 auto;
     font-size: 12px;
-    /* базовий розмір тексту */
 }
 
 .form {
@@ -18,18 +17,11 @@
     gap: 8px;
 }
 
-.label,
-.placeholder,
-.itemLabel {
-    font-size: inherit;
-}
-
 .label {
-    display: flex;
+    display: block;
     font-size: 14px;
     line-height: 1.5;
     color: var(--color-scheme-text);
-
     margin: 0 0 8px;
 }
 
@@ -65,7 +57,7 @@
 
 .textarea {
     composes: control;
-    min-height: 160px;
+    min-height: 140px;
     padding: 10px 12px;
     resize: none;
 }
@@ -151,7 +143,7 @@
 }
 
 .menuScroll {
-    max-height: 160px;
+    max-height: 150px;
     overflow: auto;
     padding: 6px;
 }
@@ -175,6 +167,7 @@
     border: none;
     cursor: pointer;
     text-align: left;
+    background: transparent;
 }
 
 .menuItemActive {
@@ -206,18 +199,29 @@
     margin-top: -1px;
 }
 
-/* .saveBtnWrap {
+.saveBtnWrap {
     margin: 10px auto 0;
-    width: 220px;
-} */
+    width: 100%;
+    max-width: 360px;
+}
 
 @media (min-width: 768px) {
-    .form {
-        max-width: 480px;
+    .formWrap{
+        width: 640px;
     }
+    .textarea {
+        min-height: 160px;
+    }
+    .menuScroll {
+        max-height: 160px;
+    }
+    .saveBtnWrap {
+        width: 220px;
+        max-width: none;
+    } 
 }
 @media (min-width: 1440px) {
-    .form {
-        max-width: 480px;
+    .menuScroll {
+        max-height: 170px;
     }
 }
