--- a/components/dashboard/DashboardMainClient/DashboardMainClient.module.css
+++ b/components/dashboard/DashboardMainClient/DashboardMainClient.module.css
@@ -9,7 +9,7 @@
   flex-direction: column;
 }
 
-/* .dashboard__content {
+.dashboard__content {
   display: flex;
   flex-direction: column;
   max-width: 375px;
@@ -46,4 +46,4 @@
   .container {
     padding: 0;
   }
-} */
+}
